<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".MainActivity"
        android:background="@color/purple_700">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAmt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/quesLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/won"
            android:background="@drawable/button_green"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAmt"
            app:layout_constraintBottom_toTopOf="@id/btnQuit"
            android:orientation="vertical"
            android:id="@+id/quesLayout"
            android:paddingTop="75dp"
            android:paddingBottom="80dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuestion"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@drawable/button_blue"
                android:text="@string/question_1"/>

            <RadioGroup
                android:id="@+id/rgOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button_light_orange">

                <RadioButton
                    android:id="@+id/rbOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1_a"/>

                <RadioButton
                    android:id="@+id/rbOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1_b"/>

                <RadioButton
                    android:id="@+id/rbOption3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1_c"/>

                <RadioButton
                    android:id="@+id/rbOption4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1_d"/>
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_blue"
                android:onClick="Submit"
                android:text="Submit"
                android:textColor="@color/white"
                android:textSize="25sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/quesLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_blue"
            android:onClick="QuitGame"
            android:text="@string/quit_text"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
